# claude

./: README (1) - copia.md  README (2) - copia.md  README (3).md  README (4).md  README - copia.md  README.md  Todo par no primo es suma de dos.pptx  ZypyZape_Pitch_Comercial (2).pptx  cribas.py  criva.py  criva.txt  discriminant.py  fermat_modular.py  mdc.py  me_detector.py  metodo_restos.py  mrauv_goldbach.py  riemann_deformado.py  salto_maximo.py  siguiente_primo.py  sofi_structure.py  wieferich_paper.tex  zypyzape_minigemelo (1).py
Archivos del doc Apiñon . docx previo a libro4/: 4.txt  AH.docx  Cribas_cotas_y_estructuras_de_primos_VMA (1).txt  Nuevo Documento de texto (2) - copia.txt  Nuevo Documento de texto (22).txt  Nuevo Documento de texto (3) - copia.txt  Nuevo Documento de texto (3).txt  Nuevo Documento de texto (4)-copia-copia-copia.txt  Nuevo Documento de texto (4).txt  Nuevo Documento de texto (5).txt  Nuevo Documento de texto.txt  Num i numeevo Documento de texto.txt  Propuesta Técnica y Comercial.docx  Puede no aceptes pasarte o quedarte corto.docx  Relación entre x.docx  V.docx  hola copi.docx  jj.txt  monic era.docx  ~$Apiñon.docx  🎓 Criva.docx
Goldbach/: Goldbach_Articulo_VMA.docx  Goldbach_Articulo_VMA_v10.docx  goldbach_ie_vma.tex  (+7 more)
Metodo Newton Rápido/predecir log raiz/UNION/Nueva carpeta/nv/: CMakeLists.txt  README.md  bench_log.cpp  bench_root.cpp
Metodo Newton Rápido/predecir log raiz/UNION/Nueva carpeta/nv/results/Nueva carpeta/: CRLIBM.csv  LIBM.csv  ROOT_CRLIBM.csv  ROOT_LIBM.csv  ROOT_SLEEF.csv  ROOT_TU.csv  SLEEF.csv  report.html
(+150 files in other folders)
